--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -21,14 +21,14 @@ genrule(
     cmd = "cp $< $@",
 )
 
-py_binary(
+load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
+py_console_script_binary(
     name = "mkdocs",
-    srcs = ["@python_deps_mkdocs//:rules_python_wheel_entry_point_mkdocs"],
+    pkg = "@python_deps//mkdocs",
     data = [
         "mkdocs.yml",
         ":release-docs",
     ] + glob(["docs/**/*"]),
-    main = "rules_python_wheel_entry_point_mkdocs.py",
     deps = [
         requirement("mkdocs-material"),
         requirement("mkdocs-git-revision-date-localized-plugin"),
