--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -107,12 +107,14 @@ http_file(
     name = "target_determinator",
     sha256 = "306071a0037fd9074d7b878a9a489597878b6035606f8ed60ef9baaf81074228",
     url = "https://github.com/bazel-contrib/target-determinator/releases/download/v0.28.0/target-determinator.linux.amd64",
+    executable = True
 )
 
 http_file(
     name = "bazelisk_linux",
     sha256 = "d9af1fa808c0529753c3befda75123236a711d971d3485a390507122148773a3",
     url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.20.0/bazelisk-linux-amd64",
+    executable = True
 )
 
 http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
