Modify the Bazel Python configuration to work as module.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -6,13 +6,21 @@ python.toolchain(python_version = "3.12.2", is_default = True)
 
 bazel_dep(name = "rules_mypy", version = "0.22.0")
 
-#types = use_extension("@rules_mypy//mypy:types.bzl", "types")
-#types.requirements(
-#    name = "pip_types",
-#    # `@pip` in the next line corresponds to the `hub_name` when using
-#    # rules_python's `pip.parse(...)`.
-#    # pip_requirements = "@pip//:requirements.bzl",
-#    # also legal to pass a `requirements.in` here
-#    requirements_txt = "//:requirements.lock",
-#)
-#use_repo(types, "pip_types")
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+pip.parse(
+    hub_name = "python_deps",
+    python_version = "3.12.2",
+    requirements_lock = "requirements-dev.lock",
+)
+use_repo(pip, "python_deps")
+
+types = use_extension("@rules_mypy//mypy:types.bzl", "types")
+types.requirements(
+    name = "pip_types",
+    # `@pip` in the next line corresponds to the `hub_name` when using
+    # rules_python's `pip.parse(...)`.
+    pip_requirements = "@python_deps//:requirements.bzl",
+    # also legal to pass a `requirements.in` here
+    requirements_txt = "//:requirements-dev.lock",
+)
+use_repo(types, "pip_types")
