--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "google-auth-httplib2>=0.2.0",
     "google-auth-oauthlib>=1.2.1",
     "pydrive2>=1.20.0",
+    "types-Markdown",
     "markdownify>=0.13.1",
     "pytest>=8.3.4",
     "pytest-asyncio>=0.24.0",
