--- a/mypy.ini
+++ b/mypy.ini
@@ -8,3 +8,7 @@ follow_imports = silent
 follow_untyped_imports = True
 follow_imports_for_stubs = True
 mypy_path = $MYPY_CONFIG_FILE_DIR/release-controller
+
+[mypy-pydrive2.*]
+follow_untyped_imports = True
+disable_error_code = import-untyped
