--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
 load("@python_deps//:requirements.bzl", "requirement")
 
 exports_files([
@@ -21,17 +22,17 @@ genrule(
     cmd = "cp $< $@",
 )
 
-py_binary(
+py_console_script_binary(
     name = "mkdocs",
-    srcs = ["@python_deps_mkdocs//:rules_python_wheel_entry_point_mkdocs"],
+    pkg = "@python_deps//mkdocs:mkdocs",
     data = [
         "mkdocs.yml",
         ":release-docs",
     ] + glob(["docs/**/*"]),
-    main = "rules_python_wheel_entry_point_mkdocs.py",
     deps = [
         requirement("mkdocs-material"),
         requirement("mkdocs-git-revision-date-localized-plugin"),
         requirement("mkdocs-git-committers-plugin-2"),
     ],
+    args = ["build"],
 )
